# stock-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py
src/model/: Stock.py
src/service/: scrapper.py
